--- a/styles/base.css
+++ b/styles/base.css
@@ -30,3 +30,21 @@ body {
     background-color: #0056b3;
     color: #c7e2ff;
 }
+
+.logout-button {
+    margin-top: 16px;
+    display: inline-block;
+    padding: 4px 8px;
+    font-size: 14px;
+    color: #480000;
+    background-color: #ffc7c7;
+    border: 1px solid #b30000;
+    text-decoration: none;
+    border-radius: 16px;
+    transition: background-color 0.3s ease;
+}
+
+.logout-button:hover {
+    background-color: #b30000;
+    color: #ffc7c7;
+}
